--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,20 +16,19 @@
             <img src="imgs/logos_black.png" alt="Light Mode Image">
         </picture>
         <div class="buttons">
-            <a class="navigation-btn" href="#info"><h5>Info</h5></a>
-            <a class="navigation-btn" href="#produkter"><h5>Produkter</h5></a>
-            <a class="navigation-btn" href="#kontakt"><h5>Kontakt</h5></a>
-            <a class="navigation-btn" href="#footer"><h5>Footer</h5></a>
+            <h5 class="navigation-btn"><a href="#nav">Info</a></h5>
+            <h5 class="navigation-btn"><a href="#produkter">Produkter</a></h5>
+            <h5 class="navigation-btn"><a href="#kontakt">Kontakt</a></h5>
         </div>
    </nav> 
    <section id="info">
        <div class="info-container">
             <div class="cta-container">
                 <h1>Historien om <span class="pink">love</span></h1>
-                <p class="intro-text">
+                <p class="intro-text" >
                     Velkommen til Love, $ex, Dreams (L$D). Opprinnelig født fra en dyp kjærlighet til musikk, ble L$D etablert som et fristed hvor kunstnere kunne uttrykke deres lidenskap uten begrensninger. Som et musikkplateselskap, er vår visjon å forvandle denne kjærligheten til uforglemmelige melodier som taler til hjertet, vekker sjelen og inspirerer drømmer. Utforsk, føl og drøm med oss.
                 </p>
-                <a class="cta-btn" href="#kontakt"><h5>Send oss en melding</h5></a>
+                <h5 class="cta-btn"><a href="#kontakt">Send oss en melding</a></h5>
                 </div>
             <div class="filler">
                 <img class="rocky" src="imgs/rocky2.png" alt="picture of a$ap rocky">
@@ -37,52 +36,64 @@
        </div>
    </section>
    <section id="produkter">
-       <h2><span class="wavy">Feeeeeeel</span> the  <span class="slanted">music</span></h2>
+       <h2 lang="en"><span class="wavy">Feeeeeeel</span> the  <span class="slanted">music</span></h2>
         <div class="produkt-wrapper">
             <div class="produkt">
                 <img src="imgs/Live_Love_ASAP.jpg" alt="bilde av LP-plate for live love asap">
                 <div class="produkt-info">
-                    <h4>LIVE, LOVE, A$AP</h4>
-                    <a href="#nav"><h5>Kjøp</h5></a>
+                    <h4 lang="en">LIVE, LOVE, A$AP</h4>
+                    <h5><a href="#nav">Kjøp</a></h5>
                 </div>
             </div> 
             <div class="produkt">
                 <img src="imgs/Live_Love_ASAP.jpg" alt="bilde av LP-plate for live love asap">
                 <div class="produkt-info">
-                    <h4>LIVE, LOVE, A$AP</h4>
-                    <a href="#nav"><h5>Kjøp</h5></a>
+                    <h4 lang="en">LIVE, LOVE, A$AP</h4>
+                    <h5><a href="#nav">Kjøp</a></h5>
                 </div>
             </div>
             <div class="produkt">
                 <img src="imgs/Live_Love_ASAP.jpg" alt="bilde av LP-plate for live love asap">
                 <div class="produkt-info">
-                    <h4>LIVE, LOVE, A$AP</h4>
-                    <a href="#nav"><h5>Kjøp</h5></a>
+                    <h4 lang="en">LIVE, LOVE, A$AP</h4>
+                   <h5><a href="#nav">Kjøp</a></h5>
                 </div>
             </div>
         </div>
    </section>
    <section id="kontakt">
-        <form action="">
-                <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <form class="skjema" action="">
+            <label for="fname"><h5>Navn</h5></label>
+            <input type="text" id="fname" name="firstname" placeholder="Ditt fornavn..">
 
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+            <label for="email"><h5>E-post</h5></label>
+            <input type="text" id="lname" name="lastname" placeholder="Din E-post..">
+            
+            <label for="sjanger"><h5>Din sjanger</h5></label>
+            <select name="Sjanger" id="sjanger">
+                <option value="hip-hop">Hip-Hop</option>
+                <option value="r&b">R&B</option>
+                <option value="country">Country</option>
+            </select>
+            <label for="subject"><h5>Melding</h5></label>
+            <textarea id="subject" name="subject" placeholder="Skriv noe.." style="height:200px"></textarea>
 
-    <label for="country">Country</label>
-    <select id="country" name="country">
-      <option value="australia">Australia</option>
-      <option value="canada">Canada</option>
-      <option value="usa">USA</option>
-    </select>
-
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-    <input type="submit" value="Submit">
+            <input id="submit-btn" onclick="alert('Takk for meldingen!');" type="submit" value="Submit">
         </form>
+        <div class="kontakt-tekst">
+            <h3>Kom i kontakt med <span class="pink">love</span></h3>
+            <p>Er du lidenskapelig opptatt av musikk, søker samarbeid, eller har spørsmål om våre unike utgivelser? Hos Love, $ex, Dreams (L$D), verdsetter vi hvert medlem av vår voksende musikalske familie. Fyll ut skjemaet ved siden av, og bli en del av vår melodiske reise. Vi ser frem til å høre fra deg.</p>
+        </div>
    </section>
+   <footer>
+        <picture >
+            <source class="footer-img" srcset="imgs/logos_white.png" media="(prefers-color-scheme: dark)">
+            <img class="footer-img" src="imgs/logos_black.png" alt="Light Mode Image">
+        </picture>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, vero voluptates. In numquam qui fugit, nobis eius tempore iste aspernatur quidem nulla tempora laborum veniam eveniet, repudiandae beatae suscipit libero.
+        </p>
+   </footer>
 </body>
 </html>
 
