--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <nav id="nav">
        <picture>
             <source srcset="imgs/logos_white.png" media="(prefers-color-scheme: dark)">
-            <img src="imgs/logos_black.png" alt="Light Mode Image">
+            <img src="imgs/logos_black.png" alt="Light Mode logo">
         </picture>
         <div class="buttons">
             <h5 class="navigation-btn"><a href="#nav">Info</a></h5>
@@ -31,7 +31,7 @@
                 <h5 class="cta-btn"><a href="#kontakt">Send oss en melding</a></h5>
                 </div>
             <div class="filler">
-                <img class="rocky" src="imgs/rocky2.png" alt="picture of a$ap rocky">
+                <img class="rocky" src="imgs/rocky2.png" alt="bilde av a$ap rocky">
             </div> 
        </div>
    </section>
@@ -41,21 +41,21 @@
             <div class="produkt">
                 <img src="imgs/Live_Love_ASAP.jpg" alt="bilde av LP-plate for live love asap">
                 <div class="produkt-info">
-                    <h4 lang="en">LIVE, LOVE, A$AP</h4>
+                    <h4 lang="en">LIVE.<span class="pink">LOVE</span>.A$AP</h4>
                     <h5><a href="#nav">Kjøp</a></h5>
                 </div>
             </div> 
             <div class="produkt">
                 <img src="imgs/Live_Love_ASAP.jpg" alt="bilde av LP-plate for live love asap">
                 <div class="produkt-info">
-                    <h4 lang="en">LIVE, LOVE, A$AP</h4>
+                    <h4 lang="en">LIVE.<span class="pink">LOVE</span>.A$AP</h4>
                     <h5><a href="#nav">Kjøp</a></h5>
                 </div>
             </div>
             <div class="produkt">
                 <img src="imgs/Live_Love_ASAP.jpg" alt="bilde av LP-plate for live love asap">
                 <div class="produkt-info">
-                    <h4 lang="en">LIVE, LOVE, A$AP</h4>
+                    <h4 lang="en">LIVE.<span class="pink">LOVE</span>.A$AP</h4>
                    <h5><a href="#nav">Kjøp</a></h5>
                 </div>
             </div>
@@ -91,8 +91,7 @@
             <img class="footer-img" src="imgs/logos_black.png" alt="Light Mode Image">
         </picture>
         <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, vero voluptates. In numquam qui fugit, nobis eius tempore iste aspernatur quidem nulla tempora laborum veniam eveniet, repudiandae beatae suscipit libero.
-        </p>
+           Love, $ex, Dreams (L$D) © 2023. Alle rettigheter forbeholdt. Utforsk vår personvernpolicy og brukervilkår. Følg oss på Facebook, Instagram og Twitter for siste nytt og oppdateringer. Lidenskapelig om musikk? Bli en del av vår nyhetsbrev og motta eksklusive tilbud. For teknisk støtte og andre henvendelser, vennligst kontakt kundeservice.        </p>
    </footer>
 </body>
 </html>
